# oms_trading

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  remove_tenant.py  scratch.py
.agents/rules/: api_schemas.mdc  audit_logging.mdc  bulk_writes.mdc  compliance_checks.mdc  documentation.mdc  enum_validation.mdc  error_taxonomy.mdc  father-prompt.md  idempotency.mdc  logging.mdc  naming_conventions.mdc  openapi_documentation.mdc  orders_api.mdc  partition_aware.mdc  performance.mdc  positions_api.mdc  security_redaction.mdc  service_files.mdc  tenant_scoping.mdc
.cursor/rules/: broker_status.mdc  bulk_endpoints.mdc  celery_tasks.mdc  clean_architecture.mdc  configuration.mdc  cursor_pagination.mdc  deprecation.mdc  error_schemas.mdc  executions_api.mdc  governance.mdc  maintenance_endpoints.mdc  market_data.mdc  omscursorrules.mdc  optimistic_concurrency.mdc  order_lifecycle.mdc  pagination_defaults.mdc  rate_limiting.mdc  reconcile.mdc  repository_interfaces.mdc  risk_checks.mdc  sse_streaming.mdc  testing.mdc  tracing.mdc  webhook_security.mdc  webhooks.mdc
backend/: manage.py  test_db.py  test_deriv_bal.py
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  apps.py  models.py  repositories.py  schemas.py  services.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_initial.py
backend/apps/api/: __init__.py  apps.py  base.py  exceptions.py  middleware.py  ninja_api.py  schemas.py  urls.py
backend/apps/api/v1/: auth.py  brokers.py  events.py  marketdata.py  oms.py  strategies.py  system.py  tenants.py
backend/apps/api/views/: dashboard.py
backend/apps/brokers/: __init__.py  admin.py  apps.py  models.py  schemas.py  services.py  signals.py
backend/apps/brokers/management/commands/: seed_brokers.py
backend/apps/brokers/migrations/: 0001_initial.py  0002_initial.py  0003_alter_broker_broker_type.py
backend/apps/core/: __init__.py  admin.py  apps.py  asgi.py  celery.py  middleware.py  models.py  signals.py  wsgi.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/apps/marketdata/: __init__.py  apps.py  cache.py  models.py  schemas.py  services.py
backend/apps/marketdata/migrations/: 0001_initial.py  0002_initial.py
backend/apps/oms/: __init__.py  apps.py  models.py  schemas.py  services.py  signals.py
backend/apps/oms/migrations/: 0001_initial.py  0002_initial.py
backend/apps/strategies/: __init__.py  admin.py  apps.py  execution_services.py  grading_services.py  ict_services.py  learning_services.py  ml_services.py  models.py  quant_services.py  risk_services.py  schemas.py  services.py  tasks.py
backend/apps/strategies/management/commands/: run_backtest.py  run_integrated_verification.py  run_major_verification.py  run_verification.py  train_trading_model.py
backend/apps/strategies/migrations/: 0001_initial.py  0002_setupperformance.py  0002_signallog.py  0003_backtestresult.py  0003_backtestresult_error_reason_backtestresult_status.py  0004_backtestresult_metrics_json_and_more.py  0005_mltraininglog_learninglabel.py  0006_signallog_direction.py
backend/apps/tenants/: README.md  __init__.py  admin.py  apps.py  forms.py  models.py  permissions.py  schemas.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/apps/tenants/migrations/: 0001_initial.py
backend/libs/: __init__.py
backend/libs/derivsdk/: client.py
backend/libs/ibsdk/: __init__.py  client.py  contracts.py  mock_client.py  orders.py
backend/ml_models/: rf_btcusd.joblib  xgb_btcusd.joblib  xgb_crybtcusd.joblib  xgb_frxgbpjpy.joblib  xgb_r_25.joblib  xgb_r_75.joblib
backend/templates/admin/: trading_dashboard.html
backend/templates/dashboard/: backtests.html  brokers.html  index.html  ml_models.html  settings.html  strategies.html  trades.html
backend/templates/layouts/: base.html
backend/tests/: test_services.py  test_views.py
docs/: ARCHITECTURE.md  BLUEPRINT.md  DOCKER_DOCUMENTATION.md  IB_GATEWAY_SETUP.md  KRONOS_AI_INTEGRATION.md  LOCAL_SETUP_GUIDE.md  ML_TRADING_GUIDE.md  MODEL_CLEANUP_SUMMARY.md  MORE_DETAILED_TASKS.md  OMS_Issues__Phases_1_4_.csv  PROCESS_UPDATE.md  PROJECT_ARCHITECTURE.md  SANUSI_OMS_BOT_MANUAL.md  SCALING_ROADMAP.md  TASKS.md
infra/grafana/provisioning/dashboards/: dashboard.yml  oms-dashboard.json
infra/nginx/: nginx.conf
infra/prometheus/: prometheus.yml
infra/scripts/: entrypoint.sh  init-db.sh
